<resources>
    <string name="app_name">SUAI</string>
    <string name="server_url_api">https://Restfulapi.ru/api/v1/</string>
    <integer name="com_vk_sdk_AppId">7810833</integer>

    <string name="authorization">Авторизация</string>
    <string name="choose_your_university">Выбери свой вуз</string>
    <string name="or">Или</string>
    <string name="login_via_VK">Войти через ВКонтакте</string>
    <string name="login_as_noun">Логин</string>
    <string name="password">Пароль</string>
    <string name="login_as_verb">Войти</string>
    <string name="error_no_university_selected">Выберите свой вуз</string>
    <string name="schedule">Расписание</string>
    <string name="today">Сегодня</string>
    <string name="even">Чётная</string>
    <string name="odd">Нечётная</string>
    <string name="you_can_sleep_in_peace">Можно спать спокойно!</string>
    <string name="comma_there_is_no_lessons">, пар нет!</string>
    <string name="there_is_no_lessons">пар нет!</string>
    <string name="search_with_ellipsis">Поиск…</string>
    <string name="groups">Группы</string>
    <string name="professors">Преподаватели</string>


</resources>