<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <Button
            android:id="@+id/login_second_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_back_arrow" />

        <TextView
            android:id="@+id/login_second_university_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="#FF000000"/>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="150dp"
        android:textSize="18sp"
        android:text="@string/login_as_noun" />

    <EditText
        android:id="@+id/login_second_login_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/rc_textfield"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:outlineProvider="none"
        android:paddingStart="15dp"
        android:paddingTop="16dp"
        android:paddingEnd="15dp"
        android:paddingBottom="17dp"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="10dp"
        android:textSize="18sp"
        android:text="@string/password" />

    <EditText
        android:id="@+id/login_second_password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/rc_textfield"
        android:ems="10"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingTop="16dp"
        android:paddingEnd="15dp"
        android:paddingBottom="17dp"
        android:textSize="18sp" />

    <Button
        android:id="@+id/login_second_enter_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/rc_textfield"
        android:backgroundTint="@color/colorSecondary"
        android:textColor="#4988F4"
        android:text="@string/login_as_verb"
        android:textAllCaps="false"
        android:textSize="18sp"
        style="?android:attr/borderlessButtonStyle"/>

</LinearLayout>