<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/core_schedule_action_bar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/rc_action_bar"
        android:elevation="@dimen/shadow_elevation">

        <Button
            android:id="@+id/core_schedule_group_filter"
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp"
            android:background="@drawable/ic_filters" />

        <TextView
            android:id="@+id/core_schedule_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/schedule"
            android:textSize="19sp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/core_schedule_user_login"
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="16dp"
            android:background="@drawable/ic_settings"
            android:visibility="invisible"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/core_schedule_weekdays_bar"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_below="@id/core_schedule_action_bar"
        android:orientation="horizontal"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/core_schedule_week_parity"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_marginStart="12dp"
            android:background="@drawable/rc_schedule_day_button"
            android:backgroundTint="@color/colorBlueLight"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:gravity="center_vertical"
            android:text="@string/even"
            android:textColor="@color/colorBlue"
            android:textSize="15sp"
            android:textStyle="bold"
            android:elevation="@dimen/shadow_elevation"/>

        <HorizontalScrollView
            android:id="@+id/core_schedule_weekdays_scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:translationX="2dp"
            android:scrollbars="none"
            android:overScrollMode="never"
            android:fadingEdge="horizontal"
            android:fadingEdgeLength="10dp"
            android:requiresFadingEdge="horizontal">

            <LinearLayout
                android:id="@+id/core_schedule_weekdays_layout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <View
                    android:layout_width="12dp"
                    android:layout_height="match_parent"/>

            </LinearLayout>

        </HorizontalScrollView>

    </LinearLayout>

    <ScrollView
        android:id="@+id/core_schedule_module_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/core_schedule_action_bar"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:scrollbars="none"
        android:overScrollMode="never"
        android:elevation="-1dp"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="66dp"/>

            <LinearLayout
                android:id="@+id/core_schedule_current_day_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp">

                <TextView
                    android:id="@+id/core_schedule_current_weekday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorLightGray1"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/core_schedule_current_day_indicator"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/today"
                    android:textColor="@color/colorBlue"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:visibility="invisible"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/core_schedule_module_frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:orientation="vertical"
                android:background="@drawable/rc_schedule_module" />

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>